# utouch-rssreaderscope

./: .gitignore  CMakeLists.txt  README.md  es.po  manifest.json.in  rssreaderscope.apparmor
po/: POTFILES.in  fr.po  rssreaderscope.pot
src/: CMakeLists.txt  action.cpp  action.h  scope.cpp  scope.h  types.cpp  types.h
src/client/: db.cpp  db.h  web.cpp  web.h  xml.cpp  xml.h
src/data/: rssreaderscope-settings.ini.in  rssreaderscope.ini.in
src/preview/: article.cpp  article.h  feedconfig.cpp  feedconfig.h  feedmanage.cpp  feedmanage.h  feedsearch.cpp  feedsearch.h  message.cpp  message.h
src/queries/: feedly.cpp  feedly.h  feedpreview.cpp  feedpreview.h  home.cpp  home.h  importOPML.cpp  importOPML.h
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  test-scope.py
